<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:background="#E1F4D5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:textColor="#444444"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/H_D_TV"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/home_departure"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/Home_DepPlace_TV"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/H_D_TV"
            tools:layout_editor_absoluteY="27dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/Home_Way_BT"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:backgroundTint="#76D865"
            android:text="@string/home_update"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/H_D_TV"
            tools:layout_editor_absoluteX="28dp" />

        <EditText
            android:id="@+id/H_D_ET"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:background="#FFFFFF"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="77dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/H_P_TV"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/home_destination"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/Home_PurPlace_TV"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"

            android:gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="148dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Home_Pur_BT"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#76D865"
            android:text="@string/home_update"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/H_P_TV"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/Home_Pur_ET"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:background="#FFFFFF"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="198dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/spot_title"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="410dp" />

        <Button
            android:id="@+id/spot_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#76D865"
            android:text="@string/spot_search"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="669dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/Home_Shift_Weather_BT"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#76D865"
            android:text="@string/weather"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="474dp" />

        <Button
            android:id="@+id/Home_Camera_BT"
            android:layout_width="129dp"
            android:layout_height="70dp"
            android:backgroundTint="#76D865"
            android:text="@string/home_camera"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="474dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/Home_Shift_Mail_BT"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#76D865"
            android:text="@string/mail_share"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="599dp" />

        <Button
            android:id="@+id/home_lang_BT"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#76D865"
            android:text="日本語/English"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="244dp"
            tools:layout_editor_absoluteY="607dp" />

    </LinearLayout>

</LinearLayout>